--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Red+Rose:wght@400;600&display=swap');
-@import url(./assets/components/header.styles.scss);
+@import url("./assets/components/header.styles.scss");
+@import url("./assets//components//card/card.styles.scss");
+$bp-mobile: 576px;
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+.btn {
+    background: linear-gradient(90deg, #A02279 11.45%, #A02279 11.45%);
+    border-radius: 10px;
+    border: 0;
+    color: white;
+    padding: 10px 20px;
 }
 
 .App {
@@ -16,13 +26,7 @@
         color: #A02279;
     }
 
-    .btn {
-        background: linear-gradient(90deg, #A02279 11.45%, #A02279 11.45%);
-        border-radius: 10px;
-        border: 0;
-        color: white;
-        padding: 10px 20px;
-    }
+
 
     // Hero component
     .hero {
@@ -43,7 +47,7 @@
                 font-size: 24px;
             }
 
-            @media(min-width: 576px) {
+            @media(min-width: $bp-mobile) {
                 text-align: left;
                 width: 60%;
             }
@@ -70,7 +74,7 @@
 
         }
 
-        @media(min-width: 576px) {
+        @media(min-width: $bp-mobile) {
             flex-direction: row;
             justify-content: space-between;
         }
@@ -85,6 +89,31 @@
 
         img {
             height: 30px;
+        }
+    }
+
+    main {
+        margin: 10vh 0;
+
+        h1 {
+            font-weight: bold;
+            margin-block: 20px;
+        }
+
+    }
+
+    footer {
+        background: #000;
+        padding: 30px;
+
+        .footer-logo {
+            width: 20%;
+            display: flex;
+            align-items: center;
+
+            img {
+                width: 100%;
+            }
         }
     }
 
