--- a/src/App.scss
+++ b/src/App.scss
@@ -1,22 +1,12 @@
-@import url("./assets/components/header.styles.scss");
-@import url("./assets//components//card/card.styles.scss");
-@import url("./assets//components/footer.styles.scss");
+@import "./assets/components/header.styles";
+@import "./assets//components//card/card.styles";
+@import "./assets//components/footer.styles";
 
-$bp-tablet: 768px;
-$bp-mobile: 480px;
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-.btn {
-    background: linear-gradient(90deg, #A02279 11.45%, #A02279 11.45%);
-    border-radius: 10px;
-    border: 0;
-    color: white;
-    padding: 10px 20px;
 }
 
 .App {
@@ -35,9 +25,10 @@ $bp-mobile: 480px;
         display: flex;
         flex-direction: column;
         margin: 30px;
+        align-items: center;
 
         .hero-info {
-            width: 100%;
+            width: 80%;
             text-align: center;
             order: 2;
 
@@ -47,37 +38,56 @@ $bp-mobile: 480px;
 
             p {
                 margin-block: 20px;
-                font-size: 24px;
             }
 
-            @media(min-width: $bp-tablet) {
+            @media(min-width: 768px) {
                 text-align: left;
-                width: 80%;
+                width: 60%;
+                order: 1;
             }
         }
 
         .hero-img {
-            width: 35%;
+            width: 80%;
+            order: 1;
 
-            order: 1 img {
+            img {
                 width: 100%;
+            }
+
+            @media screen and (min-width: 768px) {
+                order: 2;
+                width: 30%;
             }
         }
 
-        input {
-            height: 50px;
-            width: 250px;
+
+        input[type="search"] {
             padding-left: 10px;
+            height: 25px;
+            outline: none;
+            width: 200px;
+
+            @media screen and (min-width: 768px) {
+                height: 50px;
+            }
         }
 
-        button {
-            border-radius: 0;
-            width: 150px;
-            height: 50px;
+        input[type="submit"] {
+            border: 0;
+            width: 100px;
+            height: 25px;
+            outline: none;
+            background-color: #A02279;
+            color: #fff;
 
+            @media screen and (min-width: 768px) {
+                height: 50px;
+                width: 150px;
+            }
         }
 
-        @media(min-width: $bp-mobile) {
+        @media screen and (min-width: 768px) {
             flex-direction: row;
             justify-content: space-between;
         }
@@ -85,13 +95,19 @@ $bp-mobile: 480px;
 
     .sponsors {
         background-color: #A02279;
-        height: 50px;
         display: flex;
-        justify-content: space-around;
-        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 10px;
+        padding: 10px 0;
 
         img {
             height: 30px;
+        }
+
+        @media screen and (min-width: 480px) {
+            justify-content: space-around;
+            flex-direction: row;
         }
     }
 
