--- a/src/App.scss
+++ b/src/App.scss
@@ -112,11 +112,12 @@
     }
 
     main {
-        margin: 10vh 0;
+        margin: 5vh 0;
 
         h1 {
             font-weight: bold;
-            margin-block: 20px;
+            margin-bottom: 20px;
+            padding: 0 20px;
         }
 
     }
