--- a/src/assets/components/card/card.styles.scss
+++ b/src/assets/components/card/card.styles.scss
@@ -11,15 +11,11 @@
         border: 1px solid grey;
         border-radius: 5px;
         padding: 10px;
-        text-align: left;
+        justify-self: center;
 
         .card-img {
             img {
-                width: 70%;
-
-                @media(min-width: 576px) {
-                    width: 100%
-                }
+                width: 100%;
             }
         }
 
@@ -32,7 +28,11 @@
         }
     }
 
-    @media(min-width: 576px) {
+    @media screen and (min-width: 480px) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media screen and (min-width: 768px) {
         grid-template-columns: repeat(4, 1fr);
     }
 }
