--- a/src/assets/components/header.styles.scss
+++ b/src/assets/components/header.styles.scss
@@ -1,10 +1,11 @@
 header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin: 30px;
 
     .logo {
-        width: 50%;
+        width: 40%;
         display: flex;
         align-items: center;
 
@@ -12,6 +13,9 @@ header {
             width: 100%;
         }
 
+        @media screen and (min-width: 768px) {
+            width: 25%;
+        }
     }
 
     nav {
@@ -41,10 +45,11 @@ header {
     }
 
     .menu-toggle {
-        width: 32px;
-        height: 32px;
+        width: 25px;
+        height: 25px;
         background: url(../images/menu.svg) no-repeat;
         background-size: contain;
+        background-position: center center;
         cursor: pointer;
     }
 }
