--- a/src/assets/components/card/card.styles.scss
+++ b/src/assets/components/card/card.styles.scss
@@ -26,6 +26,10 @@
                 font-size: 12px;
             }
         }
+
+        .card-rating {
+            text-align: left;
+        }
     }
 
     @media screen and (min-width: 480px) {
